testdata/zkc/invalid/constant_04.zkc
//error:2:22-27:cyclic defintion
const LARGE:u8 = 1 * LARGE
